<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Tenant.AboutUs_Part.AboutUs">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/description_hotel_background_iv"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/description_hotel_background"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="About Us"
                android:textSize="35sp"
                android:textStyle="bold"
                android:textColor="@color/white"

                android:padding="10dp"
                app:layout_constraintTop_toTopOf="@+id/description_hotel_background_iv"
                app:layout_constraintBottom_toBottomOf="@+id/description_hotel_background_iv"
                app:layout_constraintStart_toStartOf="@+id/description_hotel_background_iv"
                app:layout_constraintEnd_toEndOf="@id/description_hotel_background_iv"
                />

            <ImageButton
                android:id="@+id/hotelDescription_back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/baseline_arrow_back_24"
                android:backgroundTint="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="5dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="40dp"
                android:paddingVertical="30dp"
                app:layout_constraintTop_toBottomOf="@id/description_hotel_background_iv"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us_00"
                    android:textColor="@color/gray"
                    android:layout_marginBottom="40dp"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="Leader"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/zuli" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/about_us_01"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="System Developer"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/fara" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/about_us_02"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="System Developer"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/syamira"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/about_us_03"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="System Tester"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/nena" />



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us_04"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />

                <View
                    android:layout_width="320dp"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_marginVertical="40dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="Contact Us"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="80dp"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_marginRight="20dp"
                        >
                        <ImageView
                            android:id="@+id/contact_instagram"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/icon_instagram"
                            android:layout_marginBottom="5dp"
                            android:contentDescription="InstagramMe"
                            android:clickable="true"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Instagram"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_marginRight="20dp"
                        >
                        <ImageView
                            android:id="@+id/contact_whatsapp"
                            android:layout_width="75dp"
                            android:layout_height="60dp"
                            android:src="@drawable/icon_whatsapp"
                            android:scaleType="centerCrop"
                            android:layout_marginBottom="5dp"
                            android:contentDescription="Location"
                            android:clickable="true"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Location"
                            />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_marginRight="20dp"
                        >
                        <ImageView
                            android:id="@+id/contact_phone"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/icon_phone"
                            android:layout_marginBottom="5dp"
                            android:contentDescription="CallMe"
                            android:clickable="true"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Call me"
                            />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>